--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
-.container .navbar-right {
-    display: none;
-}
+# .container .navbar-right {
+#     display: none;
+# }
 
 .navbar-default .navbar-nav > li > a {
     color: #202d3b;
@@ -15,6 +15,10 @@
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     background-image: linear-gradient(to bottom, #9f9f9f, #e7e7e7);
+    color: #202d3b;
+}
+
+.container .navbar-brand {
     color: #202d3b;
 }
 
